@@ -27,13 +27,16 @@ BrowserBridge *CreateBrowserBridge ();
 G_END_DECLS
 
 class BrowserBridge {
+	PluginInstance* plugin;
+	bool shutting_down;
+
  public:
 	BrowserBridge () : shutting_down(0) {}
 	virtual DownloaderRequest* CreateDownloaderRequest (const char *method, const char *uri, bool disable_cache) = 0;
 	virtual void Shutdown () { shutting_down = true; }
+	bool IsShuttingDown () { return shutting_down; }
 	void SetPlugin (PluginInstance* value) { plugin = value; }
-	PluginInstance* plugin;
-	bool shutting_down;
+	PluginInstance *GetPlugin () { return plugin; }
 };
 
 #endif /* BROWSER_BRIDGE */
